fixed alignment of facebook plugin

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,5 +15,5 @@ html {
 }
 
 .fb-page {
-    padding-left: 48px;
+   
 }
